--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,5 @@ tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorflow-cpu==2.8.0
 tensorflow-io-gcs-filesystem==0.24.0
-torch==1.9.0+cpu
-torchvision==0.10.0+cpu
+torch==1.9.0
+torchvision==0.10.0
