--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-fastai==1.0.61
 Pillow~=9.0.1
 opencv-python~=4.5.5.64
-Flask~=2.0.3
+Flask
 gunicorn
-tensorboard==2.8.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow-cpu==2.8.0
-tensorflow-io-gcs-filesystem==0.24.0
-torch==1.9.0
-torchvision==0.10.0
+numpy
+https://download.pytorch.org/whl/cpu/torch-1.4.0%2Bcpu-cp36-cp36m-linux_x86_64.whl
+fastai==1.0.51
